--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 1600",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 1600",
     "lint": "next lint"
   },
   "dependencies": {
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.6",
+    "formidable": "^3.3.2",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
